// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component | AppHeader.vue template should match snapshot 1`] = `
<header class="header">
  <div class="container"><a title="Home page" href="/" class="logo"><img alt="Logo of the site" src="../../static/mstile-150x150.png" class="icon"> <span class="recontact">Recontact</span> <span class="me">Me</span></a>
    <!---->
    <nav>
      <ul class="navigation">
        <!---->
        <!---->
        <!---->
        <li class="link other-language"><button type="button" class="button other-language">
            🇫🇷
          </button></li>
      </ul>
    </nav>
  </div>
</header>
`;

exports[`Component | AppHeader.vue template should match snapshot on article page 1`] = `
<header class="header">
  <div class="container"><a title="Home page" href="/" class="logo"><img alt="Logo of the site" src="../../static/mstile-150x150.png" class="icon"> <span class="recontact">Recontact</span> <span class="me">Me</span></a>
    <nav>
      <ul class="navigation">
        <li class="previous article">
          <nuxtlink type="button" to="/articles/7" class="button previous article">
            &lt;
          </nuxtlink>
        </li>
        <li class="article-text">
          <p class="id">
            Article 8
          </p>
        </li>
        <li class="next article">
          <nuxtlink type="button" to="/articles/9" class="button next article">
            &gt;
          </nuxtlink>
        </li>
      </ul>
    </nav>
    <nav>
      <ul class="navigation">
        <!---->
        <!---->
        <!---->
        <li class="link other-language"><button type="button" class="button other-language">
            🇫🇷
          </button></li>
      </ul>
    </nav>
  </div>
</header>
`;
